# user_registration_api

./: Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
app/core/: config.py  dependencies.py  middleware.py  security.py
app/database/: init.py  pool.py  users.py
app/routers/: users.py
app/schemas/: exceptions.py  users.py
app/services/: users.py
app/utils/: constants.py
app/utils/exceptions/: __init__.py  authentication.py  users.py
app/utils/smtp/: __init__.py  client.py  console_client.py
core/: config.py
database/: pool.py
tests/: conftest.py  test_users.py
