[project]
name = "user-registration-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Keox96",email = "asmboss1096@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard] (>=0.128.2,<0.129.0)",
    "asyncpg (>=0.31.0,<0.32.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^26.1.0"
isort = "^7.0.0"
pylint = "^4.0.4"

